# latexpages

./: .gitattributes  .gitignore  CHANGES  CHANGES.rst  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.rst  clean-example.py  make-example.py  paginate-example.py  pyproject.toml  render-example.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml
example/: .gitignore  psf.cls  psf42.ini
example/andrews/: andrews.tex
example/bradshaw/: bradshaw.tex
example/lambert/: lambert.tex
example/nesbitt/: nesbitt.tex
example/prelims/: prelims.tex
example/smegma/: smegma.tex
example/watson_watson/: watson_watson.tex
latexpages/: __init__.py  __main__.py  _compat.py  backend.py  build.py  building.py  cleaning.py  jobs.py  numbering.py  pdfpages.py  render.py  rendering.py  settings.ini  template.tex  tools.py
