[project]
name = "latexpages"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Combine LaTeX docs into a single PDF"
keywords = ["pdfpages", "parallel", "compilation", "proceedings"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Printing",
  "Topic :: Text Processing :: Markup :: LaTeX",
]

[project.urls]
Homepage = "https://github.com/xflr6/latexpages"
"Issue Tracker" = "https://github.com/xflr6/latexpages/issues"
CI = "https://github.com/xflr6/latexpages/actions"

[project.scripts]
latexpages = "latexpages.__main__:main"
latexpages-paginate = "latexpages.__main__:main_paginate"
latexpages-clean = "latexpages.__main__:main_clean"

[project.optional-dependencies]
dev = ["build", "wheel", "twine", "flake8", "Flake8-pyproject", "pep8-naming"]
test = ["coverage[toml]"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.package-data]
latexpages = ["template.tex", "settings.ini"]

[tool.setuptools.dynamic]
version = {attr = "latexpages.__version__"}

[tool.flake8]
exclude = [".tox"]
ignore = ["E126", "E128", "W503"]
max-line-length = 100

[tool.coverage.run]
source = ["latexpages"]
branch = false
