[project]
name = "latexpages"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Combine LaTeX docs into a single PDF"
keywords = ["pdfpages", "parallel", "compilation", "proceedings"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Printing",
  "Topic :: Text Processing :: Markup :: LaTeX",
]

[project.urls]
Homepage = "https://github.com/xflr6/latexpages"
Changelog = "https://github.com/xflr6/latexpages/blob/master/CHANGES.rst"
"Issue Tracker" = "https://github.com/xflr6/latexpages/issues"
CI = "https://github.com/xflr6/latexpages/actions"
Coverage = "https://app.codecov.io/gh/xflr6/latexpages"

[project.scripts]
latexpages = "latexpages.__main__:main"
latexpages-paginate = "latexpages.__main__:main_paginate"
latexpages-clean = "latexpages.__main__:main_clean"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.package-data]
latexpages = ["template.tex", "settings.ini"]

[tool.setuptools.dynamic]
version = {attr = "latexpages.__version__"}

[dependency-groups]
dev = [  # $ pip install -e . --group dev
  "build",
  "twine",
  "wheel",
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "typing" },
]
lint = [
  "flake8",
  "Flake8-pyproject",
  "pep8-naming",
]
test = [
  "coverage[toml]"
]
typing = [
  "mypy",
]

[tool.mypy]
packages = ["latexpages"]
# https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true

[tool.flake8]
exclude = [".tox"]
ignore = ["E126", "E128", "W503"]
max-line-length = 100

[tool.coverage.run]
source = ["latexpages"]
branch = false
